--- a/helpfile.html
+++ b/helpfile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <script src="../js/jquery-3.2.1.js" ></script>
+    <script src="js/jquery-3.2.1.js" ></script>
     <title></title>
     <style>
         *{margin: 0; padding: 0;}
