--- a/repassword.html
+++ b/repassword.html
@@ -24,36 +24,46 @@
 </center>
 <script>
     $(function(){
-    $("#repassword").submit(function(event){
-        var oldpassword=$("#oldpassword").val();
-        var newpassword=$("#newpassword").val();
-        var renewpassword=$("#renewpassword").val();
-        $.get("repassword.php",function(data) {
-            if(data!=oldpassword){
-                event.preventDefault();$("#repasswordspan").html("*原密码输入错误");$("oldpassword").focus();
+    $("#repassword").submit(function(event) {
+        var oldpassword = $("#oldpassword").val();
+        var newpassword = $("#newpassword").val();
+        var renewpassword = $("#renewpassword").val();
+        $.get("repassword.php", function (data) {
+            if (data != oldpassword) {
+                event.preventDefault();
+                $("#repasswordspan").html("*原密码输入错误");
+                $("oldpassword").focus();
             }
         });
-    if(newpassword==""){
-        event.preventDefault();$("#repasswordspan").html("*密码不能为空");$("newpassword").focus();}
-    else if(newpassword.length<6){
-        event.preventDefault();$("#repasswordspan").html("*
-        echo "<a href='operation.php?ed=delete&id={$row['id']}'>删除</a></td></tr>";
-    }
-        密码不能低于6位");$("newpassword").focus();}
-    else if(oldpassword==newpassword)
-    {
-        event.preventDefault();$("#repasswordspan").html("*新密码与旧密码一致");$("newpassword").focus();
-    }
-    else if(newpassword!=renewpassword)
-    {
-        event.preventDefault();$("#repasswordspan").html("*两次输入新密码不一致");$("#newpassword").html("请输入新密码");$("#renewpassword").html("请重新输入新密码");
-        $("newpassword").focus();
-    }
-    else{
-        $.post("repassword.php",{newpassword:newpassword},function(newpassword){alert(newpassword)}
-        )
-    }
-    });
+        if (newpassword == "") {
+            event.preventDefault();
+            $("#repasswordspan").html("*密码不能为空");
+            $("#newpassword").focus();
+        }
+        else if (newpassword.length < 6) {
+            event.preventDefault();
+            $("#repasswordspan").html("*密码不能低于6位");
+            $("#newpassword").focus();
+        }
+        else if (oldpassword == newpassword) {
+            event.preventDefault();
+            $("#repasswordspan").html("*新密码与旧密码一致");
+            $("#newpassword").focus();
+        }
+        else if (newpassword != renewpassword) {
+            event.preventDefault();
+            $("#repasswordspan").html("*两次输入新密码不一致");
+            $("#newpassword").html("请输入新密码");
+            $("#renewpassword").html("请重新输入新密码");
+            $("newpassword").focus();
+        }
+        else {
+            $.post("repassword.php", {newpassword: newpassword}, function (data) {
+                if (data == 1)
+                    alert("密码修改成功！")
+            })
+        }
+    })
     });
 </script>
 </body>
