点名信息查询修正

--- a/attendance.html
+++ b/attendance.html
@@ -74,7 +74,7 @@
         var search = $("span").html();  //获取当前标签值
         var obj = document.getElementById("select_class");
         var index = obj.selectedIndex;
-        if (search = "选择班级") {
+        if (search = "选择日期") {
             if (obj.options[index].value != -1) {
                 $.ajax({
                     type: "POST",
@@ -95,7 +95,7 @@
 
             }
         }
-        else if (search = "选择日期") {
+        else if (search = "选择班级") {
             if (obj.options[index].value != -1) {
                 $.ajax({
                     type: "POST",
@@ -103,14 +103,20 @@
                     data: {search: search, select_class: obj.options[index].value},
                     dataType: "json",
                     success: function (data) {    //返回数据为学号，学生，点名几次，实到几次，总缺勤率
-                        var h = "<table id=tb>";
-                        for (var i = 0; i < data.length; i++) {
-                            h += "<tr>";
-                            h += "<td>" + data[i].student_number + "</td>" + "<td>" + data[i].student_name + "</td>" + "<td>" + data[i].call_number + "</td>" +
-                                    "<td>" + data[i].come_number + "</td>" + data[i].attendance_rate_sum + "</td>";
-                            h += "</tr>"
+                        var h="";
+                        if(data.length>0) {
+                            h+= "<table id=tb>";
+                            for (var i = 0; i < data.length; i++) {
+                                h += "<tr>";
+                                h += "<td>" + data[i].student_number + "</td>" + "<td>" + data[i].student_name + "</td>" + "<td>" + data[i].call_number + "</td>" +
+                                        "<td>" + data[i].come_number + "</td>" + data[i].attendance_rate_sum + "</td>";
+                                h += "</tr>"
+                            }
+                            h += "</table>";
                         }
-                        h += "</table>";
+                        else{
+                              h="<span>+该班未点过名</span>";
+                        }
                         document.getElementById("showdata").innerHTML = h;
                     }
                 })
