--- a/data-analysis.html
+++ b/data-analysis.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>数据分析</title>
 </head>
-<script src="../js/Echarts/echarts.js"></script>
-<script src="../js/jquery-3.2.1.js"></script>
+<script src="js/Echarts/echarts.js"></script>
+<script src="js/jquery-3.2.1.js"></script>
 <style type="text/css">
     body,html {
         margin: 0;
